feat: add friends game section
