# server/openapi/openapi.yml
@@ -14,6 +14,8 @@ paths:
     $ref: ./paths/api/v1/ai-games/moves.yml
   /api/v1/with-friends-games:
     $ref: ./paths/api/v1/with-friends-games/index.yml
+  /api/v1/with-friends-games/stats:
+    $ref: ./paths/api/v1/with-friends-games/stats.yml
   /api/v1/with-friends-games/join:
     $ref: ./paths/api/v1/with-friends-games/join.yml
   /api/v1/with-friends-games/{gameId}/moves:
@@ -49,6 +51,10 @@ components:
       $ref: ./components/schemas/join-with-friends-game-response.yml
     CreateWithFriendsGameMoveRequest:
       $ref: ./components/schemas/create-with-friends-game-move-request.yml
+    GetWithFriendsGamesResponse:
+      $ref: ./components/schemas/get-with-friends-games-response.yml
+    GetWithFriendsGamesStatsResponse:
+      $ref: ./components/schemas/get-with-friends-games-stats-response.yml
     GetUserResponse:
       $ref: ./components/schemas/get-user-response.yml
     GetCurrentUserResponse:
